<resources>
    <string name="app_name">NUMAD22Fa_YaozhengWang</string>
    <string name="about_me">About Me</string>
    <string name="clicky_clicky">Clicky Clicky</string>
    <string name="button_a">A</string>
    <string name="button_b">B</string>
    <string name="button_c">C</string>
    <string name="button_d">D</string>
    <string name="button_e">E</string>
    <string name="button_f">F</string>
    <string name="click">Pressed: -</string>
    <string name="link_collector">Link Collector</string>
    <string name="desc">Floating Button</string>
    <string name="about">Name: Yaozheng Wang \nEmail: wang.yaozh@northeastern.edu</string>
    <string name="link_name">Name: </string>
    <string name="link_url">Url: </string>
    <string name="Http">http://</string>
    <string name="link_info">Enter A Link</string>
    <string name="Add">Add</string>
    <string name="add_link_success">Added a link successfully</string>
    <string name="invalid_link">This is a invalid url! Please input a new url!</string>
    <string name="Cancel">Cancel</string>
    <string name="remove_a_link">Removed a link</string>
    <string name="prime_directive">Prime Directive</string>
    <string name="find_primes">Find Primes</string>
    <string name="terminate_search">Terminate Search</string>
    <string name="pacifier_switch">Pacifier Switch</string>
    <string name="current_number">Now the number being searched is </string>
    <string name="last_prime_number">The last prime number searched is</string>
    <string name="location">Location</string>
    <string name="latitude">Latitude Location: </string>
    <string name="longitude">Longitude Location: </string>
    <string name="total_distance">Total Distance: 0.0 meters</string>
    <string name="reset_location">Reset Location</string>
    <string name="share_location">Share Location</string>
</resources>