<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".primeDirective.PrimeDirectiveActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/currentNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_number"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/lastPrimeNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lastPrimeNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_prime_number"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/findPrimes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentNumber" />

    <Button
        android:id="@+id/findPrimes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_primes"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/terminateSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastPrimeNumber" />

    <Button
        android:id="@+id/terminateSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terminate_search"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/pacifierSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/findPrimes" />

    <CheckBox
        android:id="@+id/pacifierSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pacifier_switch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/terminateSearch" />

</androidx.constraintlayout.widget.ConstraintLayout>